add ingredients and recipes datas, add the recipes choice and grocery list parts

--- a/src/main.css
+++ b/src/main.css
@@ -16,3 +16,23 @@
 a {
     text-decoration: none;
 }
+
+.main {
+    margin-top: 70px;
+}
+
+.button {
+    all: unset;
+    padding: 7px 60px;
+    background-color: var(--orange);
+    color: var(--beige);
+    font-size: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.button:hover {
+    background-color: var(--beige);
+    color: var(--orange);
+}
